tests/cases/compile_fail/game_mouse_bad_types.lsc
main() -> i64 do
  println(game_mouse_x("bad"))
  return 0
end
